[gd_scene load_steps=2 format=3 uid="uid://c3preview"]

[ext_resource type="Script" path="res://src/ui/components/preview/preview_panel.gd" id="1_preview"]

[node name="PreviewPanel" type="PanelContainer"]
script = ExtResource("1_preview")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 2
split_offset = -60

[node name="PreviewContainer" type="SubViewportContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VSplitContainer/PreviewContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(400, 300)
render_target_update_mode = 4

[node name="CheckerBackground" type="ColorRect" parent="VSplitContainer/PreviewContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ImagePreview" type="TextureRect" parent="VSplitContainer/PreviewContainer/SubViewport"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="NoPreviewLabel" type="Label" parent="VSplitContainer/PreviewContainer/SubViewport"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -11.5
offset_right = 60.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "No preview available"
horizontal_alignment = 1

[node name="MetadataBar" type="HBoxContainer" parent="VSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 32)

[node name="FileInfoLabel" type="Label" parent="VSplitContainer/MetadataBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "No file selected"

[node name="TagsContainer" type="HBoxContainer" parent="VSplitContainer/MetadataBar"]
unique_name_in_owner = true
layout_mode = 2

[node name="FavoriteButton" type="Button" parent="VSplitContainer/MetadataBar"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "â˜…"
flat = true

[node name="NotesEdit" type="LineEdit" parent="VSplitContainer/MetadataBar"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
placeholder_text = "Add notes..."
